--- a/index.html
+++ b/index.html
@@ -26,9 +26,85 @@
         </nav>
         <ul>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+            <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
         </ul>
     </header>
+    <main>
+    <div>
+            <h1>Effective Solutions for Your Business</h1>
+            <button type="button">Order Service</button>
+    </div>
+    <section>
+        <ul>
+            <li>
+                <h3>Strategy</h3>
+                <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+            </li>
+            <li>
+                <h3>Punktuality</h3>
+                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+            </li>
+            <li>
+                <h3>Diligence</h3>
+                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+            </li>
+            <li>
+                <h3>Technologies</h3>
+                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h2>What we are doing</h2>
+        <ul>
+            <li>
+            <img src="./images/img1.jpg" alt="computer monitor" width="360">
+            </li>
+            <li>
+            <img src="./images/img2.jpg" alt="smartphone" width="360">
+            </li>
+            <li>
+            <img src="./images/img3.jpg" alt="smartphone on laptop background" width="360">
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h3>Our Team</h3>
+        <ul>
+        <li><figure>
+            <img src="./images/member1.jpg" alt="team member 1">
+            <figcaption>Mark Guerrero
+            Product Designer</figcaption>
+        </figure>
+        </li>
+        <li>
+        <figure>
+            <img src="./images/member2.jpg" alt="team member 2">
+            <figcaption>Tom Ford
+            Frontend Developer</figcaption>
+        </figure>
+        </li>
+        <li>
+        <figure>
+            <img src="./images/member3.jpg" alt="team member 2">
+            <figcaption>Camila Garcia
+            Marketing</figcaption>
+        </figure>
+        </li>
+        <li>
+        <figure>
+            <img src="./images/member4.jpg" alt="team member 4">
+            <figcaption>Daniel Wilson
+            UI Designer</figcaption>
+        </figure>
+        </li>
+        </ul>
+    </section>
+    </main>
+    <footer>
+        <a href="">Web Studio</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </footer>
 </body>
 
 </html>
