--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <header>
-        <a href="">Web Studio</a>
         <nav>
+        <a href="./index.html">Web Studio</a>
             <ul>
                 <li>
                     <a href="">Studio</a>
@@ -24,10 +24,12 @@
                 </li>
             </ul>
         </nav>
+        <address>
         <ul>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
         </ul>
+        </address>
     </header>
     <main>
     <div>
