--- a/index.html
+++ b/index.html
@@ -32,26 +32,26 @@
         </address>
     </header>
     <main>
-    <div>
+    <section>
             <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
-    </div>
+    </section>
     <section>
         <ul>
             <li>
-                <h3>Strategy</h3>
+                <h2>Strategy</h2>
                 <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
             </li>
             <li>
-                <h3>Punktuality</h3>
+                <h2>Punktuality</h2>
                 <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
             <li>
-                <h3>Diligence</h3>
+                <h2>Diligence</h2>
                 <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
             <li>
-                <h3>Technologies</h3>
+                <h2>Technologies</h2>
                 <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
         </ul>
