--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
             </li>
             <li>
-                <h2>Punktuality</h2>
+                <h2>Punctuality</h2>
                 <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
             <li>
@@ -57,7 +57,7 @@
         </ul>
     </section>
     <section>
-        <h2>What we are doing</h2>
+        <h3>What are we doing</h3>
         <ul>
             <li>
             <img src="./images/img1.jpg" alt="computer monitor" width="360">
@@ -71,40 +71,34 @@
         </ul>
     </section>
     <section>
-        <h3>Our Team</h3>
+        <h2>Our Team</h2>
         <ul>
         <li><figure>
-            <img src="./images/member1.jpg" alt="team member 1">
+            <img src="./images/member1.jpg" alt="team member 1" width="264">
             <figcaption>Mark Guerrero
             Product Designer</figcaption>
         </figure>
         </li>
         <li>
-        <figure>
-            <img src="./images/member2.jpg" alt="team member 2">
-            <figcaption>Tom Ford
-            Frontend Developer</figcaption>
-        </figure>
+            <img src="./images/member2.jpg" alt="team member 2" width="264">
+            <h3>Tom Ford</h3>
+            <p>Developer</p> 
         </li>
         <li>
-        <figure>
-            <img src="./images/member3.jpg" alt="team member 2">
-            <figcaption>Camila Garcia
-            Marketing</figcaption>
-        </figure>
+            <img src="./images/member3.jpg" alt="team member 2" width="264">
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
         </li>
         <li>
-        <figure>
-            <img src="./images/member4.jpg" alt="team member 4">
-            <figcaption>Daniel Wilson
-            UI Designer</figcaption>
-        </figure>
+            <img src="./images/member4.jpg" alt="team member 4" width="264">
+            <h3>Wilson</h3> 
+            <p>UI Designer</p>
         </li>
         </ul>
     </section>
     </main>
     <footer>
-        <a href="">Web Studio</a>
+        <a href="./index.html">Web Studio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
