--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-        <a href="./index.html">Web Studio</a>
+        <a href="./index.html">WEBSTUDIO</a>
             <ul>
                 <li>
                     <a href="">Studio</a>
@@ -27,7 +27,7 @@
         <address>
         <ul>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
         </address>
     </header>
@@ -38,51 +38,51 @@
     </section>
     <section>
         <ul>
+            <h2>Advantages</h2>
             <li>
-                <h2>Strategy</h2>
+                <h3>Strategy</h3>
                 <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
             </li>
             <li>
-                <h2>Punctuality</h2>
+                <h3>Punctuality</h3>
                 <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
             <li>
-                <h2>Diligence</h2>
+                <h3>Diligence</h3>
                 <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
             <li>
-                <h2>Technologies</h2>
+                <h3>Technologies</h3>
                 <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
         </ul>
     </section>
     <section>
-        <h3>What are we doing</h3>
+        <h2>What are we doing</h2>
         <ul>
             <li>
-            <img src="./images/img1.jpg" alt="computer monitor" width="360">
+                <img src="./images/img1.jpg" alt="computer" width="360">
             </li>
             <li>
-            <img src="./images/img2.jpg" alt="smartphone" width="360">
+                <img src="./images/img2.jpg" alt="smartphone" width="360">
             </li>
             <li>
-            <img src="./images/img3.jpg" alt="smartphone on laptop background" width="360">
+                <img src="./images/img3.jpg" alt="smartphone on desktop backgroung" width="360">
             </li>
         </ul>
     </section>
     <section>
         <h2>Our Team</h2>
         <ul>
-        <li><figure>
+        <li>
             <img src="./images/member1.jpg" alt="team member 1" width="264">
-            <figcaption>Mark Guerrero
-            Product Designer</figcaption>
-        </figure>
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
         </li>
         <li>
             <img src="./images/member2.jpg" alt="team member 2" width="264">
             <h3>Tom Ford</h3>
-            <p>Developer</p> 
+            <p>Frontend Developer</p> 
         </li>
         <li>
             <img src="./images/member3.jpg" alt="team member 2" width="264">
@@ -91,14 +91,14 @@
         </li>
         <li>
             <img src="./images/member4.jpg" alt="team member 4" width="264">
-            <h3>Wilson</h3> 
+            <h3>Daniel Wilson</h3> 
             <p>UI Designer</p>
         </li>
         </ul>
     </section>
     </main>
     <footer>
-        <a href="./index.html">Web Studio</a>
+        <a href="./index.html">WEBSTUDIO</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
