--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-        <a href="./index.html">WEBSTUDIO</a>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li>
                     <a href="">Studio</a>
@@ -37,8 +37,8 @@
             <button type="button">Order Service</button>
     </section>
     <section>
+        <h2>Advantages</h2>
         <ul>
-            <h2>Advantages</h2>
             <li>
                 <h3>Strategy</h3>
                 <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
@@ -98,7 +98,7 @@
     </section>
     </main>
     <footer>
-        <a href="./index.html">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
